--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "db": "pm2 start pm2/db.json",
     "dev": "pm2 start pm2/dev.json",
-    "pro": "node app.js"
+    "pro": "pm2 start pm2/pro.json"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
   "dependencies": {
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
+    "koa-ejs": "^4.1.1",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.8.1",
     "koa2-cors": "^2.0.5",
     "mongoose": "^5.0.15",
     "uuid": "^3.2.1"
