--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
     "koa2-cors": "^2.0.5",
+    "moment": "^2.22.1",
     "mongoose": "^5.0.15",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "validator": "^9.4.1"
   }
 }
